syntax = "proto3";

package merchandise_master;
option go_package = "./internal/proto/merchandise";

service MerchandiseService {
  rpc PutAwayMerchandise (PutAwayMerchandiseReq) returns (PutAwayMerchandiseResp);
  rpc RemoveMerchandise (RemoveMerchandiseReq) returns (RemoveMerchandiseResp);
  rpc UpdateMerchandise (UpdateMerchandiseReq) returns (UpdateMerchandiseResp);
  rpc GetMerchandiseDetails (GetMerchandiseDetailsReq) returns (GetMerchandiseDetailsResp);
  rpc Search (SearchReq) returns (SearchResp);
  rpc SearchByCategory (SearchByCategoryReq) returns (SearchByCategoryResp);
  rpc AddMerchandiseStyle (AddMerchandiseStyleReq) returns (AddMerchandiseStyleResp);
  rpc RemoveMerchandiseStyle (RemoveMerchandiseStyleReq) returns (RemoveMerchandiseStyleResp);
  rpc UpdateMerchandiseStyle (UpdateMerchandiseStyleReq) returns (UpdateMerchandiseStyleResp);
  rpc GetMerchandiseStyleList (GetMerchandiseStyleListReq) returns (GetMerchandiseStyleListResp);
  rpc GetMerchandiseStyleDetails (GetMerchandiseStyleDetailsReq) returns (GetMerchandiseStyleDetailsResp);
  rpc HandlePicture (stream HandlePicturesReq) returns (HandlePicturesResp);
}


message PutAwayMerchandiseReq {
  string id = 1;
  string name = 2;
  string info = 3;
  string delivery = 4;
  string category = 5;
  repeated string pictureList = 6;
}

message PutAwayMerchandiseResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message RemoveMerchandiseReq {
  string id = 1;
}

message RemoveMerchandiseResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message UpdateMerchandiseReq {
  string id = 1;
  string name = 2;
  string info = 3;
  repeated string pictureList = 4;
  string delivery = 5;
  string category = 6;
}

message UpdateMerchandiseResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message GetMerchandiseDetailsReq {
  string id = 1;
}

message GetMerchandiseDetailsResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message SearchReq {
  string content = 1;
  int32 time = 2;
  int32 sales = 3;
  int32 req = 4;
  int32 size = 5;
}

message SearchResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message SearchByCategoryReq {
  string category = 1;
  int32 time = 2;
  int32 sales = 3;
  int32 req = 4;
  int32 size = 5;
}

message SearchByCategoryResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message AddMerchandiseStyleReq {
  string id = 1;
  string merchandiseID = 2;
  string name = 3;
  string info = 4;
  string picture = 5;
  float price = 6;
  uint32 stock = 7;
  string status = 8;
}

message AddMerchandiseStyleResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message RemoveMerchandiseStyleReq {
  string id = 1;
}

message RemoveMerchandiseStyleResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message UpdateMerchandiseStyleReq {
  string id = 1;
  string name = 2;
  string info = 3;
  string picture = 4;
  float price = 5;
  int32 stock = 6;
  string status = 7;
}

message UpdateMerchandiseStyleResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message GetMerchandiseStyleListReq {
  string merchandiseID = 1;
  int32 req = 4;
  int32 size = 5;
}

message GetMerchandiseStyleListResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message GetMerchandiseStyleDetailsReq {
  string id = 1;
}

message GetMerchandiseStyleDetailsResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

message HandlePicturesReq {
  string bucket = 1;
  string path = 2;
  bytes data = 3;
}

message HandlePicturesResp {
  string code = 1;
  string message = 2;
  bytes data = 3;
}

